set separate developers, designers and managers list instead employee list in manager Set in DLL and BLL Created DB.

--- a/BaseOOPCompany/BaseOOPProject.csproj
+++ b/BaseOOPCompany/BaseOOPProject.csproj
@@ -7,8 +7,10 @@
 
   <ItemGroup>
     <Folder Include="Employees\" />
-    <Folder Include="SalaryCalculators\" />
-    <Folder Include="SalaryCalculatorFactories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BaseOOPBLL\BaseOOPBLL.csproj" />
   </ItemGroup>
 
 </Project>
