--- a/BaseOOPCompany/BaseOOPProject.csproj
+++ b/BaseOOPCompany/BaseOOPProject.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Employees\" />
+    <PackageReference Include="AutoMapper" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
